force-app/main/default/objects/LPCR_Preinscription__c/LPCR_Preinscription__c.object-meta.xml
<CustomObject>
    <description>Objet servant à stocker les réponses aux formulaires de préinscription remplis par les familles par l&#39;intermédiare de FormAssembly</description>
    <label>Préinscription</label>
    <nameField>
        <displayFormat>PI-{000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Préinscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>