force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_AccepteRecevoirOffres__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccepteRecevoirOffres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepte de recevoir les offres</label>
    <type>Checkbox</type>
</CustomField>