force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_AdresseCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AdresseCreche__c</fullName>
    <description>Used in email template</description>
    <formula>LPCR_Creche__r.ShippingStreet &amp; BR() &amp;
LPCR_Creche__r.ShippingCity &amp; &quot;, &quot; &amp;
LPCR_Creche__r.ShippingPostalCode &amp; BR() &amp;
LPCR_Creche__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Crèche</label>
    <type>Text</type>
</CustomField>