force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_AmplitudeHoraireJeudi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireJeudi__c</fullName>
    <label>Jeudi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Après - midi</fullName>
            </value>
            <value>
                <fullName>Journée complète</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>