force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Anciennete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Anciennete__c</fullName>
    <formula>TODAY() - LPCR_DateEntreeEntreprise__c</formula>
    <label>Ancienneté (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>