force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_AvecSponsor__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvecSponsor__c</fullName>
    <formula>!ISBLANK(LPCR_CompteEntreprise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avec Sponsor</label>
    <type>Checkbox</type>
</CustomField>