force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_CompteEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Préinscriptions</relationshipLabel>
    <relationshipName>PreinscriptionsEntreprise</relationshipName>
    <type>Lookup</type>
</CustomField>