force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ContactDirectriceCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactDirectriceCreche__c</fullName>
    <formula>TEXT(LPCR_Creche__r.LPCR_ContactDirectrice__r.Salutation)+&quot; &quot;+LPCR_Creche__r.LPCR_ContactDirectrice__r.FirstName+&quot; &quot;+LPCR_Creche__r.LPCR_ContactDirectrice__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Directrice Crèche</label>
    <type>Text</type>
</CustomField>