force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ContactEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant__c</fullName>
    <label>Contact Enfant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Enfant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Préinscriptions</relationshipLabel>
    <relationshipName>Preinscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>