force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ContactInscriptionsCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactInscriptionsCreche__c</fullName>
    <formula>TEXT(LPCR_Creche__r.LPCR_ContactInscriptions__r.Salutation)+&quot; &quot;+LPCR_Creche__r.LPCR_ContactInscriptions__r.FirstName+&quot; &quot;+LPCR_Creche__r.LPCR_ContactInscriptions__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Inscriptions Crèche</label>
    <type>Text</type>
</CustomField>