force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ContactParent2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactParent2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Parent 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Préinscriptions (Contact Parent 2)</relationshipLabel>
    <relationshipName>PreinscriptionsParent2</relationshipName>
    <type>Lookup</type>
</CustomField>