force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ContactParent__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Préinscriptions (Contact Parent)</relationshipLabel>
    <relationshipName>PreinscriptionsParent</relationshipName>
    <type>Lookup</type>
</CustomField>