force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Contrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contrat__c</fullName>
    <label>Contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>Intérim</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>