force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DateConfirmationInteret__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateConfirmationInteret__c</fullName>
    <description>date à laquelle les parents confirment leur intérêt pour une inscription en crèche</description>
    <label>Date de confirmation de l&apos;intérêt</label>
    <type>Date</type>
</CustomField>