force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DateEntreeCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeCreche__c</fullName>
    <label>Date d&apos;entrée en crèche</label>
    <type>Date</type>
</CustomField>