force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DateEntreeEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeEntreprise__c</fullName>
    <label>Date d&apos;entrée dans l&apos;entreprise</label>
    <type>Date</type>
</CustomField>