force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DateNaissance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance__c</fullName>
    <label>ToDelete_Date de naissance</label>
    <type>Date</type>
</CustomField>