force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DateSortie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateSortie__c</fullName>
    <label>Date de sortie</label>
    <type>Date</type>
</CustomField>