force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DemandeInscriptionCrecheMunicipal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DemandeInscriptionCrecheMunicipal__c</fullName>
    <label>Demande inscription en crèche municipal?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_ExistenceCrecheMunicipale__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>