force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DetailHandicapEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DetailHandicapEnfant__c</fullName>
    <label>Détail Handicap Enfant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L&apos;enfant à inscrire</fullName>
            </value>
            <value>
                <fullName>Un autre enfant dans la fratrie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>