force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_DossierComplet__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DossierComplet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le service Famille vérifie les pièces jointes et coche cette case lorsque le dossier est complet</description>
    <label>Dossier complet</label>
    <type>Checkbox</type>
</CustomField>