force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_EnfantDateDeNaissance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnfantDateDeNaissance__c</fullName>
    <label>Enfant - Date De Naissance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>