force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_EnfantNom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnfantNom__c</fullName>
    <label>Enfant - Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>