force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_EnfantPrenom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnfantPrenom__c</fullName>
    <label>Enfant - Prénom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>