force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_EnregistreeBrouillon__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnregistreeBrouillon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enregistrée en brouillon</label>
    <type>Checkbox</type>
</CustomField>