force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HandicapEnfantDansLaFraterie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HandicapEnfantDansLaFraterie__c</fullName>
    <formula>LPCR_CompteFamille__r.LPCR_Handicap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handicap enfant dans la fraterie</label>
    <type>Checkbox</type>
</CustomField>