force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureDebutMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDebutMardi__c</fullName>
    <label>Heure de début mardi</label>
    <type>Time</type>
</CustomField>