force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureDebutMercredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDebutMercredi__c</fullName>
    <label>Heure de début mercredi</label>
    <type>Time</type>
</CustomField>