force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureDebutVendredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDebutVendredi__c</fullName>
    <label>Heure de début vendredi</label>
    <type>Time</type>
</CustomField>