force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureFinJeudi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinJeudi__c</fullName>
    <label>Heure de fin jeudi</label>
    <type>Time</type>
</CustomField>