force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureFinLundi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinLundi__c</fullName>
    <label>Heure de fin lundi</label>
    <type>Time</type>
</CustomField>