force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureFinMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinMardi__c</fullName>
    <label>Heure de fin mardi</label>
    <type>Time</type>
</CustomField>