force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureFinMercredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinMercredi__c</fullName>
    <label>Heure de fin mercredi</label>
    <type>Time</type>
</CustomField>