force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeureFinVendredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinVendredi__c</fullName>
    <label>Heure de fin vendredi</label>
    <type>Time</type>
</CustomField>