force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_HeuresParSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeuresParSemaine__c</fullName>
    <formula>CASE(LPCR_AmplitudeHoraireLundi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireMardi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireMercredi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireJeudi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireVendredi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heures par semaine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>