force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_InteretConfirme__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InteretConfirme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lorsque coché, réinitialise le processus de relance de 3 mois.
Est décoché automatiquement</description>
    <label>Intérêt confirmé / reset relance</label>
    <type>Checkbox</type>
</CustomField>