force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Jumeaux__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Jumeaux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cocher cette case si des jumeaux sont à inscrire</description>
    <inlineHelpText>Cocher cette case si des jumeaux sont à inscrire. Une demande par enfant devra être effectuée.</inlineHelpText>
    <label>Jumeaux</label>
    <type>Checkbox</type>
</CustomField>