force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_LabelQuestionSupplementaire1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LabelQuestionSupplementaire1__c</fullName>
    <label>Label Question Supplémentaire 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>