force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_LienFormulaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LienFormulaire__c</fullName>
    <formula>HYPERLINK(Tech_LienFormulaire__c+&quot;?preid=&quot;+Id, &quot;Editer dans FormAssembly&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien formulaire</label>
    <type>Text</type>
</CustomField>