force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Longitude__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Longitude__c</fullName>
    <label>LPCR_Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>