force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Lundi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lundi__c</fullName>
    <description>dépend des heures de début et de fin : 1 si toute la journée et 0,5 pour une demi journée</description>
    <formula>IF(OR(ISBLANK(LPCR_HeureFinLundi__c),ISBLANK(LPCR_HeureDebutLundi__c )),0,
IF(
((LPCR_HeureFinLundi__c-LPCR_HeureDebutLundi__c)/3600000&gt;=5),1,
IF((LPCR_HeureFinLundi__c-LPCR_HeureDebutLundi__c)/3600000&gt;0,0.5,0)))</formula>
    <label>Lundi</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>