force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_ModeDAccueilDeLEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ModeDAccueilDeLEnfant__c</fullName>
    <label>Mode d&apos;accueil de l&apos;enfant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistante maternelle (hors crèche familiale)</fullName>
            </value>
            <value>
                <fullName>Nourrice à domicile</fullName>
            </value>
            <value>
                <fullName>Crèche</fullName>
            </value>
            <value>
                <fullName>Multi-accueil</fullName>
            </value>
            <value>
                <fullName>Halte-garderie</fullName>
            </value>
            <value>
                <fullName>Conjoint</fullName>
            </value>
            <value>
                <fullName>Autre membre de la famille</fullName>
            </value>
            <value>
                <fullName>Amis</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>