force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_MutationRecenteOuProchainement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MutationRecenteOuProchainement__c</fullName>
    <label>Rep1 - Mutation récente ou proch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>