force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_NbrJoursPriseEnCharge__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NbrJoursPriseEnCharge__c</fullName>
    <formula>IF(LPCR_IsChanged__c,
			Null,
			((5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) ) + 10)
			-
			(5 * ( FLOOR( (  TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours avant prise en charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>