force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_NombreDeJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreDeJour__c</fullName>
    <label>Nombre de jour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>