force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_NombreInscrits__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreInscrits__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Nombre de demande par compte famille, concerne les fratrie</description>
    <inlineHelpText>Nombre de demande par compte famille, concerne les fratrie</inlineHelpText>
    <label>ToDelete_Nombre d&apos;inscrits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>