force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_NombreJours__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJours__c</fullName>
    <description>Nombre de jours par semaine d&apos;accueil de l’enfant. Somme des valeurs de Lundi à Vendredi</description>
    <formula>CASE(LPCR_AmplitudeHoraireLundi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireMardi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireMercredi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireJeudi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)+
CASE(LPCR_AmplitudeHoraireVendredi__c,
&quot;Matin&quot;,0.5,
&quot;Après - midi&quot;,0.5,
&quot;Journée complète&quot;,1,
0
)</formula>
    <inlineHelpText>Nombre de jours par semaine d&apos;accueil de l’enfant. Somme des valeurs de Lundi à Vendredi</inlineHelpText>
    <label>Nombre de jours (calculé)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>