force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_OrdreTri__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrdreTri__c</fullName>
    <description>Champ permettant de trier le rapport Liste d&apos;attribution suivant les 3 critères : Score, Date de préinscription et Date d&apos;entrée</description>
    <formula>TEXT(LPCR_Score__c)&amp;&apos;-&apos;&amp;TEXT( CreatedDate )&amp;&apos;-&apos;&amp; TEXT(LPCR_DateEntreeCreche__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Permet de trier le rapport Liste d&apos;attribution suivant les 3 critères : Score, Date de préinscription et Date d&apos;entrée</inlineHelpText>
    <label>Ordre de tri</label>
    <type>Text</type>
</CustomField>