force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_PossedeUnModeDAccueilPourLEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PossedeUnModeDAccueilPourLEnfant__c</fullName>
    <label>Possède un mode d&apos;accueil pour l&apos;enfant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>