force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_PrecisionMutation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrecisionMutation__c</fullName>
    <label>TO DELETE_Précision mutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>