force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_PrenomEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrenomEnfant__c</fullName>
    <label>ToDelete_Prénom de l&apos;enfant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>