force-app/main/default/objects/LPCR_Preinscription__c/fields/LPCR_Rep1Civilite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Rep1Civilite__c</fullName>
    <label>Rep1 - Civilité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>